--- a/profileapp/tamplates/profileapp/create.html
+++ b/profileapp/tamplates/profileapp/create.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    <div style="text-align: center; max-sidth: 500px; margin: 4rem auto">
+    <div style="text-align: center; max-width: 500px; margin: 4rem auto">
         <div class="mb-4">
             <h4>Profil Create</h4>
         </div>
